src/_assets/css/pages/_uses.css
*:has(+ .macos-dock-wrapper) {
	position: relative;
	z-index: 1;
}

.macos-dock-wrapper {
	--MACOSDOCK-padding: 1rem;
	--MACOSDOCK-overflow-factor: 4;
	padding-block: calc(var(--MACOSDOCK-padding) / 2);
}

.macos-dock {
	position: relative;
	z-index: 0;

	max-inline-size: 100%;
	min-inline-size: fit-content;
	margin-block-start: calc(var(--MACOSDOCK-padding) * -1 * var(--MACOSDOCK-overflow-factor));
	margin-inline: auto;

	&::before {
		content: '';
		position: absolute;
		inset: calc(var(--MACOSDOCK-padding) * (var(--MACOSDOCK-overflow-factor) - 1)) 0 0;
		z-index: -1;

		border: 1px solid #161617;
		border-radius: calc(var(--MACOSDOCK-padding) * 2);
		background: #202020;
		box-shadow: inset 0 0 0.5px 1px #414141;

		@supports (corner-shape: squircle) {
			border-radius: calc(var(--MACOSDOCK-padding) * 4);
			corner-shape: squircle;
		}
	}
}
.macos-dock-inner {
	padding-block-start: calc(var(--MACOSDOCK-padding) * var(--MACOSDOCK-overflow-factor));
	padding-block-end: calc(var(--MACOSDOCK-padding) - 6px); /* Scrollbar sizing varies so we'll just remove a few pixels to make it look clos enough */
	overflow-x: auto;
	overflow-y: clip;
	scrollbar-width: thin;
	scrollbar-color: #808080 transparent;

	mask: conic-gradient(tan 0 0) no-repeat 0 100% / 100% var(--MACOSDOCK-padding),
		linear-gradient(90deg, transparent 0%, tan var(--MACOSDOCK-padding), tan calc(100% - var(--MACOSDOCK-padding)), transparent 100%) no-repeat center 0 / 100%
			calc(100% - var(--MACOSDOCK-padding));

	@media (pointer: fine) {
		&:not(:hover) {
			scrollbar-color: #414141 transparent;
		}
	}
}
.macos-dock-list {
	display: flex;
	justify-content: safe center;
	gap: calc(var(--MACOSDOCK-padding) / 2);
	min-inline-size: fit-content;
	padding: 0;

	list-style-type: '';

	&::before,
	&::after {
		content: '';

		flex: 0 0 auto;
		display: block;
		width: calc(var(--MACOSDOCK-padding) / 2);
		height: 1px;
	}
}
.macos-dock-list li {
	flex: 0 0 auto;
}
.macos-dock-list img {
	display: block;
	inline-size: 4rem;
	block-size: auto;

	@media (prefers-reduced-motion: no-preference) {
		&:hover {
			scale: 1.2;
		}

		transition: scale var(--anim-short) var(--easing-in-out);
	}
}

